--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>three.js app</title>
+    <title>portfolio</title>
     <style>
       #main {
         position: fixed;
         top: 0;
         left: 0;
-        border: 2px solid rgb(184, 33, 33);
-        border-radius: 2px;
+        /* border: 2px solid rgb(184, 33, 33); */
+        /* border-radius: 2px; */
       }
     </style>
     <link rel="stylesheet" href="style.css" />
