--- a/index.html
+++ b/index.html
@@ -6,26 +6,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>portfolio</title>
-    <style>
-      #main {
-        position: fixed;
-        top: 0;
-        left: 0;
-        /* border: 2px solid rgb(184, 33, 33); */
-        /* border-radius: 2px; */
-      }
-    </style>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <canvas id="main">
-      <div>hello</div>
-    </canvas>
-    <main style="position: absolute; color: white;">
-    
-
+    <nav>
+     <button id="click">click</button>
+    </nav>
+    <canvas id="main"> </canvas>
+    <main style="position: absolute; color: white">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit nulla quod
+      quia soluta adipisci nostrum. Voluptates vero aspernatur placeat molestiae
+      rem itaque fugiat ut eius quae tenetur aliquam blanditiis iste at iure
+      unde, modi ab praesentium, a ex libero autem eos officia? Unde laboriosam
+      repellat laudantium vero libero, blanditiis ex numquam magnam earum
+      quaerat ea temporibus. Dolor magni rem vero ut dolorem voluptate natus
+      commodi mollitia fuga veritatis quis, numquam veniam voluptatum
+      dignissimos nobis amet architecto eum exercitationem, alias quae enim vel
+      inventore. Quae, autem consequuntur. Sequi voluptate ipsa recusandae
+      repellat numquam neque dolor exercitationem libero! Quaerat, ipsam.
+      Quidem, deleniti dolores? Dolorum, blanditiis reprehenderit incidunt
+      necessitatibus, quaerat neque debitis iste quibusdam laboriosam
+      consequuntur alias architecto ratione officia deleniti earum laudantium
+      est error asperiores odio recusandae. Libero neque nemo iure tempora
+      numquam magnam laboriosam deleniti repellendus ipsam incidunt earum
+      exercitationem praesentium eius nesciunt, sapiente doloremque fuga
+      possimus similique iusto officia odit! Cupiditate quia ab officia odio
+      voluptatibus neque, eum molestias aut fuga. Repellat quo maiores voluptate
+      dicta velit! Voluptatibus, nulla assumenda libero quidem sed asperiores
+      eaque, unde neque sint porro magnam, repellat qui quod animi eos nostrum
+      perferendis similique dicta aliquam itaque ratione. Cumque asperiores
+      porro ipsa natus, error perspiciatis mollitia possimus aliquid, modi dicta
+      qui, quibusdam dolores maiores inventore quaerat consequatur laboriosam
+      quidem odit! Tempora dolore unde porro delectus debitis aliquid aut eius
+      laudantium hic eum iusto illum, eos explicabo quidem tempore, alias
+      facilis? Possimus, deleniti quod magni molestias atque nulla sunt enim rem
+      mollitia necessitatibus cumque sit optio? Neque dolore aperiam temporibus
+      repudiandae, eligendi voluptatem architecto nostrum necessitatibus dolor
+      commodi iste molestias rem ipsa illo animi reprehenderit quas amet?
+      Assumenda a aliquid iste hic itaque error reiciendis. Esse totam tempore
+      eaque reprehenderit iste quod eveniet et optio natus tenetur aut hic
+      provident, dolor iusto cumque debitis qui culpa nulla sequi voluptatibus?
+      Mollitia, in velit. Maxime nesciunt laudantium dolore itaque tenetur eius
+      ducimus excepturi odio. Perferendis beatae sapiente molestiae eaque qui,
+      aspernatur laboriosam incidunt. Aspernatur porro voluptate velit
+      perspiciatis. Numquam nemo est natus nobis, facere architecto! Ducimus
+      porro quaerat, totam consequuntur nostrum blanditiis assumenda dignissimos
+      expedita, voluptatum necessitatibus nihil cupiditate nam similique ullam
+      sunt! Error repellendus, delectus tenetur aliquam quidem, animi
+      exercitationem, non quae voluptatem rem consequuntur saepe magni
+      consequatur expedita laboriosam rerum quia qui in velit. Reprehenderit
+      quod id culpa qui natus dolorum consectetur? Tenetur rerum praesentium
+      doloremque laborum odio. Vero, exercitationem corrupti aspernatur dolores
+      quam mollitia obcaecati consectetur?
     </main>
     <script type="module" src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TimelineMax.min.js"></script>
     <!-- <script type="module">
       import * as THREE from "https://unpkg.com/three@0.120.1/build/three.module.js";
 
